# zero_agent

./: .gitignore  README.md  code01_intro.md  code02_agent.md  code02_agent.py  code02_llm.py  code02_mcp.md  code03_agentscope.md  code03_agentscope_001.py  code03_agentscope_002_hook.py  main.py  pyproject.toml
raw_data/: function.json  messages_add_function.json  messages_chat.json  messages_function001.json  messages_function002.json  model_output.json
src/: config.py
src/agent/: agentscope_add.py  simple_agent.py
src/mcp/: simple_tool.py
support_file/: agent_message_flow.drawio  agentscope_reactagent.drawio
